refactor: 🍝 Unspaghettifyed the code, add some null safety etc. It compiles, may break something, ... we will see